--- a/about.html
+++ b/about.html
@@ -265,7 +265,7 @@
 					<div class="teacher">
 						<div class="teacher_image"><img src="images/tanya2.png" alt="" height="380" width="380px"></div>
 						<div class="teacher_body text-center">
-							<div class="teacher_title"><a href="#">Marthin</a></div>
+							<div class="teacher_title"><a href="wahyudi.html">Marthin</a></div>
 							<div class="teacher_subtitle"></div>
 							<div class="teacher_social">
 								<ul>
